src/objects/Regional_Pricing_Model__c.object
<CustomObject>
    <description>CRM Analysts maintain a regionalized pricing list based on maintenance symbols in order to display and view accurate claim pricing based on dealer’s regions and zones.</description>
    <fields>
        <fullName>Model_Year__c</fullName>
        <formula>Product__r.Model_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Product__r.Model_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Regional_Pricing_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regionalized_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regionalized Grouping</label>
        <referenceTo>Regionalized_Grouping__c</referenceTo>
        <relationshipName>Regional_Pricing_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Symbol_Description__c</fullName>
        <label>Symbol Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symbol__c</fullName>
        <label>Symbol</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Regionalized Pricing Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Model__c</columns>
        <columns>Price__c</columns>
        <columns>Product__c</columns>
        <columns>Symbol__c</columns>
        <columns>Regionalized_Grouping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Regionalized Pricing Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regionalized Pricing Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>